--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -40,6 +40,8 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   airbnb_dbt:
     +materialized: view
+    +post-hook:
+      - "GRANT SELECT ON {{this}} TO ROLE REPORTER"
     dim:
       +materialized: table
     src:
