--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -20,6 +20,7 @@ seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 asset-paths: ["assets"]
+log-path: logs/
 
 target-path: "target"  # directory which will store compiled SQL files
 clean-targets:         # directories to be removed by `dbt clean`
@@ -46,3 +47,7 @@ models:
       +materialized: table
     src:
       +materialized: ephemeral
+
+
+vars:
+  user_name: default_user
